--- a/src/services/ProductCatalogApi/ProductCatalogApi.csproj
+++ b/src/services/ProductCatalogApi/ProductCatalogApi.csproj
@@ -10,4 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1"/>
   </ItemGroup>
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.1.1"/>
+  </ItemGroup>
 </Project>
