--- a/src/services/ProductCatalogApi/appsettings.json
+++ b/src/services/ProductCatalogApi/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString":"Server=localhost,1445;Database=CatalogDb;user=sa;Password=productapi(!);MultipleActiveResultSets=true",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
